# aegis-incident-response

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_COVERAGE.md  DOCUMENTATION_INDEX.md  Dockerfile  PROJECT_PLAN.md  README.md  Repository_Branding_Update_Report.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
config/: prometheus.yml
contest/: MASTER_DOCUMENTATION_PROMPT.md
contest/diagrams/: Agent_Architecture.md  Agent_Interaction_Diagram.md  Deployment_Diagram.md  Diagram_Audit_Report.md  High_Level_Architecture.md  Workflow_Diagram.md
contest/presentation/: Slide_01_Title.md  Slide_02_Problem.md  Slide_03_Solution_Overview.md  Slide_04_Architecture.md  Slide_05_Agentic_Workflow.md  Slide_06_Live_Demo.md  Slide_07_Business_Value.md  Slide_08_Technical_Deep_Dive.md  Slide_09_Implementation_Status.md  Slide_10_Future_Roadmap.md  Slide_11_Differentiation.md  Slide_12_Thank_You.md
contest/prompts/: 01_Regenerate_Project_Summary.md  02_Regenerate_Problem_Statement.md  03_Regenerate_Customer_Challenges.md  04_Regenerate_AI_Solution.md  05_Regenerate_Solution_Architecture.md  06_Regenerate_Agentic_Workflow.md  07_Regenerate_All_Source.md
contest/review/: Contest_Review_Checklist.md
contest/source/: Contest_AI_Solution.md  Contest_Agentic_Workflow.md  Contest_Assumptions.md  Contest_Business_Value.md  Contest_Customer_Challenges.md  Contest_Demo_Script.md  Contest_Deployment.md  Contest_Evidence.md  Contest_Future_Roadmap.md  Contest_Implementation_Timeline.md  Contest_Problem_Statement.md  Contest_Project_Summary.md  Contest_QA.md  Contest_Risk_Register.md  Contest_Solution_Architecture.md
contest/submission/: 01_Project_Summary.txt  02_Problem_Statement.txt  03_AI_Solution.txt  04_Solution_Architecture.txt  05_Agentic_Workflow.txt  06_Customer_Challenges.txt  07_Business_Value.txt  08_Deployment.txt  09_Evidence.txt  10_Future_Roadmap.txt  11_Implementation_Timeline.txt  12_Risk_Register.txt  13_QA.txt  14_Demo_Script.txt  15_Assumptions.txt  16_Diagrams_High_Level_Architecture.txt  17_Diagrams_Agent_Architecture.txt  18_Diagrams_Agent_Interaction.txt  19_Diagrams_Workflow.txt  20_Diagrams_Deployment.txt  Presentation_Slides.txt
docs/: 01_Project_Overview.md  02_System_Architecture.md  03_Agent_Architecture.md  04_Agent_Interaction.md  05_AI_Decision_Engine.md  06_Workflow.md  07_API_Documentation.md  08_Configuration.md  09_Deployment_Guide.md  10_Testing.md  11_Project_Structure.md  12_Component_Reference.md  13_Vector_Database.md  14_Monitoring.md  15_Validation.md  16_Security.md  17_Business_Value.md  18_Future_Roadmap.md  19_FAQ.md  20_Glossary.md
src/: __init__.py  main.py
src/agents/: base.py  executor.py  observer.py  orchestrator.py  planner.py  validator.py
src/api/: __init__.py  app.py
src/api/routes/: agents.py  approvals.py  health.py  incidents.py  monitoring.py  validation.py
src/core/: __init__.py  action_dispatcher.py  approval.py  config.py  database.py  embeddings.py  exceptions.py  incident_store.py  knowledge_base.py  logging.py  models.py  monitoring.py  similar_incidents.py  utils.py  validation.py  vector_db.py
src/dashboard/: app.py
tests/: test_action_dispatcher.py  test_agent_orchestrator.py  test_agent_pipeline.py  test_api.py  test_approval.py  test_dashboard.py  test_planner_search.py  test_similar_incidents.py
