[project]
name = "aegis-incident-response"
version = "1.0.0"
description = "Multi-Agent AI Incident Response Platform — automated production incident management with LLM-driven orchestration"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Prathamesh Jadhav", email = "jadhavprathmesh042@gmail.com" },
]
keywords = [
    "incident-response",
    "ai-agents",
    "sre",
    "devops",
    "langgraph",
    "llm",
    "automation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
    "chromadb>=0.5.0",
    "openai>=1.55.0",
    "streamlit>=1.40.0",
    "plotly>=5.24.0",
]

[project.urls]
Homepage = "https://github.com/jadhav-prathamesh/aegis-incident-response"
Repository = "https://github.com/jadhav-prathamesh/aegis-incident-response"
Documentation = "https://github.com/jadhav-prathamesh/aegis-incident-response/tree/master/docs"
"Bug Tracker" = "https://github.com/jadhav-prathamesh/aegis-incident-response/issues"
"Changelog" = "https://github.com/jadhav-prathamesh/aegis-incident-response/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "T20", # flake8-print
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL",  # pylint
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function calls in default arguments
    "C901",  # too complex (allow for complex agents)
    "T201",  # print statements (allowed in scripts)
    "S101",  # assert statements (allowed in tests)
    "N818",  # Exception suffix naming (PlatformException intentional)
    "PLC0415",  # lazy imports (circular dependency avoidance)
]
[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "T201", "B008"]
"scripts/*" = ["T201", "B008"]
"src/agents/*" = ["C901"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
pretty = true
follow_imports = "silent"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "scripts.*",
]
strict = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--tb=short",
    "-ra",
    "--timeout=60",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "contract: Contract tests",
    "chaos: Chaos engineering tests",
    "load: Load tests",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "scripts/*",
    "*/migrations/*",
    "*/conftest.py",
]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = true

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B101", "B601"]

[tool.safety]
ignore-vulns = []